Fixed scrollbar issues and created logs view from socket connection

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -58,3 +58,21 @@
     @apply bg-background text-foreground;
   }
 }
+
+/* Custom Scrollbar */
+::-webkit-scrollbar {
+  @apply w-1.5
+}
+
+::-webkit-scrollbar-track {
+  @apply hover:bg-neutral-900
+}
+
+::-webkit-scrollbar-thumb {
+  @apply bg-neutral-500 rounded-lg w-1
+}
+
+::-webkit-scrollbar-thumb:hover {
+  /* background-color: hsl(var(--primary)); */
+  @apply bg-neutral-400
+}
